Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/IB_Product__c.object-meta.xml
<CustomObject>
    <label>IB Product</label>
    <nameField>
        <label>IB Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IB Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>