Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Commercial_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Product_Name__c</fullName>
    <label>Commercial Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>