Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>IB Products</relationshipLabel>
    <relationshipName>IB_Products</relationshipName>
    <type>Lookup</type>
</CustomField>