Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Manufacturer_Type__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Type__c</fullName>
    <label>Manufacturer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>