Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <label>Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>