Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Tier_1_P_L__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_P_L__c</fullName>
    <label>Tier 1 P&amp;L</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCIT</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MDx</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>