Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Tier_2_P_L__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_P_L__c</fullName>
    <label>Tier 2 P&amp;L</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DGS</fullName>
            </value>
            <value>
                <fullName>HCIT</fullName>
            </value>
            <value>
                <fullName>LCS</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MDx</fullName>
            </value>
            <value>
                <fullName>MICT</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MVS</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>U/S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>