Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Product__c/fields/Tier_3_P_L__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_P_L__c</fullName>
    <label>Tier 3 P&amp;L</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessories and Supplies</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Automated Breast U/S</fullName>
            </value>
            <value>
                <fullName>AW</fullName>
            </value>
            <value>
                <fullName>Bone Mineral Density (BMD)</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular (CV)</fullName>
            </value>
            <value>
                <fullName>Cardiovascular (U/S)</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Diagnostic Cardiology (DCAR)</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>e-Health</fullName>
            </value>
            <value>
                <fullName>Enterprise Solutions</fullName>
            </value>
            <value>
                <fullName>General Imaging</fullName>
            </value>
            <value>
                <fullName>HHS</fullName>
            </value>
            <value>
                <fullName>Imaging Solutions</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Maternal Infant Care (MIC)</fullName>
            </value>
            <value>
                <fullName>MDx</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MVS</fullName>
            </value>
            <value>
                <fullName>NUC</fullName>
            </value>
            <value>
                <fullName>Patient Monitoring (PM)</fullName>
            </value>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>Point-of-Care</fullName>
            </value>
            <value>
                <fullName>Premium Angiography (PA)</fullName>
            </value>
            <value>
                <fullName>Primary Care</fullName>
            </value>
            <value>
                <fullName>Radiography and Radiography &amp; Fluoroscopy (RRF)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>